--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "electron-fluent-ui",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config ./webpack.config.js",
+    "electron": "electron  ./dist/electron.js",
+    "start": "npm run build && npm run electron",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -17,6 +19,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "electron": "^24.3.1",
     "electron-builder": "^24.4.0",
+    "electron-store": "^8.1.0",
+    "electron-window-state": "^5.0.3",
     "eslint": "^8.41.0",
     "html-webpack-plugin": "^5.5.1",
     "prettier": "^2.8.8",
