--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "electron-window-state": "^5.0.3",
     "eslint": "^8.41.0",
     "html-webpack-plugin": "^5.5.1",
+    "i18next": "^22.5.0",
     "prettier": "^2.8.8",
     "ts-loader": "^9.4.3",
     "typescript": "^5.0.4",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1"
   }
 }
