--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-fluent-ui",
+  "name": "electron-typescript-react-fluentui",
   "version": "1.0.0",
   "description": "",
   "scripts": {
