--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@types/node": "^20.2.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "copy-webpack-plugin": "^11.0.0",
     "electron": "^24.3.1",
     "electron-builder": "^24.4.0",
     "electron-store": "^8.1.0",
     "electron-window-state": "^5.0.3",
     "eslint": "^8.41.0",
+    "eslint-plugin-react": "^7.32.2",
     "html-webpack-plugin": "^5.5.1",
     "i18next": "^22.5.0",
     "prettier": "^2.8.8",
